Colaboratory を使用して作成しました

--- a/cpp_apg4b.ipynb
+++ b/cpp_apg4b.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_apg4b.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPKACuF37vG8al7YDIwvHJR",
+      "authorship_tag": "ABX9TyPYMniuYI44DvjOQbkuzTHd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -16092,15 +16092,6 @@
       }
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "hVUSVfAoJgGS"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "# AC - 3.05.ビット演算 \n",
@@ -16140,7 +16131,7 @@
         "id": "FLAJF_JYbr7D",
         "outputId": "9e350ba4-f296-47c9-ba1a-7b8d91a5828b"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -16234,7 +16225,7 @@
         "id": "8HTnB0rpbp_6",
         "outputId": "25820eca-30bf-4fc7-8407-777f71e8a4f8"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -16267,109 +16258,310 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "hVUSVfAoJgGS"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "具体例\n",
-        "0111 AND 0100 = 0100\n",
-        "縦に並べると次のようになります。\n",
+        "# 具体例\n",
+        "# 0111 AND 0100 = 0100\n",
+        "# 縦に並べると次のようになります。\n",
         "\n",
-        "    0111\n",
-        "AND 0100\n",
-        "--------\n",
-        "  = 0100\n",
-        "OR演算\n",
-        "下の表で定義される演算をOR演算（または論理和）といいます。 ビット毎にOR演算を適用する演算をビット毎のOR演算（bitwise OR）といいます。\n",
+        "#     0111\n",
+        "# AND 0100\n",
+        "# --------\n",
+        "#   = 0100\n",
         "\n",
-        "x\ty\tx OR y\n",
-        "0\t0\t0\n",
-        "0\t1\t1\n",
-        "1\t0\t1\n",
-        "1\t1\t1\n",
-        "OR演算ではx, yのビットの少なくとも一方が1の場合に結果が1となります。 逆に言うと、共に0の場合のみ結果が0となります。\n",
+        "# OR演算\n",
+        "# 下の表で定義される演算をOR演算（または論理和）といいます。 \n",
+        "# ビット毎にOR演算を適用する演算をビット毎のOR演算（bitwise OR）といいます。\n",
+        "# OR演算ではx, yのビットの少なくとも一方が1の場合に結果が1となります。 \n",
+        "# 逆に言うと、共に0の場合のみ結果が0となります。\n",
+        "%%html\n",
+        "<style>\n",
+        "    tr td:nth-child(3) {\n",
+        "        color: red;\n",
+        "        text-align: center;\n",
+        "    }\n",
+        "</style>\n",
+        "<table border=\"1\">\n",
+        "<thead>\n",
+        "<tr><th>x</th><th>y</th><th>x OR y</th></tr>\n",
+        "</thead>\n",
+        "<tbody>\n",
+        "<tr><td>0</td><td>0</td><td>0</td></tr>\n",
+        "<tr><td>0</td><td>1</td><td>1</td></tr>\n",
+        "<tr><td>1</td><td>0</td><td>1</td></tr>\n",
+        "<tr><td>1</td><td>1</td><td>1</td></tr>\n",
+        "</tbody>\n",
+        "</table>\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "K_41AIQWqgow",
+        "outputId": "808017c6-c503-41fa-ae72-34d9b438b6fc",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 138
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<style>\n",
+              "    tr td:nth-child(3) {\n",
+              "        color: red;\n",
+              "        text-align: center;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\">\n",
+              "<thead>\n",
+              "<tr><th>x</th><th>y</th><th>x OR y</th></tr>\n",
+              "</thead>\n",
+              "<tbody>\n",
+              "<tr><td>0</td><td>0</td><td>0</td></tr>\n",
+              "<tr><td>0</td><td>1</td><td>1</td></tr>\n",
+              "<tr><td>1</td><td>0</td><td>1</td></tr>\n",
+              "<tr><td>1</td><td>1</td><td>1</td></tr>\n",
+              "</tbody>\n",
+              "</table>\n"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 具体例\n",
+        "# 0111 OR 0100 = 0111\n",
+        "# 縦に並べると次のようになります。\n",
         "\n",
-        "具体例\n",
-        "0111 OR 0100 = 0111\n",
-        "縦に並べると次のようになります。\n",
+        "#     0111\n",
+        "#  OR 0100\n",
+        "# --------\n",
+        "#   = 0111\n",
         "\n",
-        "    0111\n",
-        " OR 0100\n",
-        "--------\n",
-        "  = 0111\n",
-        "XOR演算\n",
-        "下の表で定義される演算をXOR演算（または排他的論理和）といいます。 ビット毎にXOR演算を適用する演算をビット毎のXOR演算（bitwise XOR）といいます。\n",
+        "# XOR演算\n",
+        "# 下の表で定義される演算をXOR演算（または排他的論理和）といいます。 \n",
+        "# ビット毎にXOR演算を適用する演算をビット毎のXOR演算（bitwise XOR）といいます。\n",
+        "# XOR演算ではx, yのビットの一方が1の場合に限り結果が1となります。 \n",
+        "# x, yのビットが等しい場合に0になると見ることもできます。\n",
+        "%%html\n",
+        "<style>\n",
+        "    tr td:nth-child(3) {\n",
+        "        color: red;\n",
+        "        text-align: center;\n",
+        "    }\n",
+        "</style>\n",
+        "<table border=\"1\">\n",
+        "<thead>\n",
+        "<tr><th>x</th><th>y</th><th>x XOR y</th></tr>\n",
+        "</thead>\n",
+        "<tbody>\n",
+        "<tr><td>0</td><td>0</td><td>0</td></tr>\n",
+        "<tr><td>0</td><td>1</td><td>1</td></tr>\n",
+        "<tr><td>1</td><td>0</td><td>1</td></tr>\n",
+        "<tr><td>1</td><td>1</td><td>0</td></tr>\n",
+        "</tbody>\n",
+        "</table>"
+      ],
+      "metadata": {
+        "id": "ccQhb_UgvzTr",
+        "outputId": "265054ef-eee0-4306-b73b-7d72f7820691",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 138
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<style>\n",
+              "    tr td:nth-child(3) {\n",
+              "        color: red;\n",
+              "        text-align: center;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\">\n",
+              "<thead>\n",
+              "<tr><th>x</th><th>y</th><th>x XOR y</th></tr>\n",
+              "</thead>\n",
+              "<tbody>\n",
+              "<tr><td>0</td><td>0</td><td>0</td></tr>\n",
+              "<tr><td>0</td><td>1</td><td>1</td></tr>\n",
+              "<tr><td>1</td><td>0</td><td>1</td></tr>\n",
+              "<tr><td>1</td><td>1</td><td>0</td></tr>\n",
+              "</tbody>\n",
+              "</table>"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 具体例\n",
+        "# 0111 XOR 0100 = 0011\n",
+        "# 縦に並べると次のようになります。\n",
         "\n",
-        "x\ty\tx XOR y\n",
-        "0\t0\t0\n",
-        "0\t1\t1\n",
-        "1\t0\t1\n",
-        "1\t1\t0\n",
-        "XOR演算ではx, yのビットの一方が1の場合に限り結果が1となります。 x, yのビットが等しい場合に0になると見ることもできます。\n",
+        "#     0111\n",
+        "# XOR 0100\n",
+        "# --------\n",
+        "#   = 0011\n",
         "\n",
-        "具体例\n",
-        "0111 XOR 0100 = 0011\n",
-        "縦に並べると次のようになります。\n",
+        "# NOT演算\n",
+        "# 下の表で定義される演算をNOT演算といいます。 \n",
+        "# ビット毎にNOT演算を適用する演算をビット毎のNOT演算（bitwise NOT）といいます。\n",
+        "# NOT演算は単にビットを反転する演算で、0のビットは1に、1のビットは0になります。\n",
+        "%%html\n",
+        "<style>\n",
+        "    tr td:nth-child(2) {\n",
+        "        color: red;\n",
+        "        text-align: center;\n",
+        "    }\n",
+        "</style>\n",
+        "<table border=\"1\">\n",
+        "<thead>\n",
+        "<tr><th>x</th><th>NOT x</th></tr>\n",
+        "</thead>\n",
+        "<tbody>\n",
+        "<tr><td>0</td><td>1</td></tr>\n",
+        "<tr><td>1</td><td>0</td></tr>\n",
+        "</tbody>\n",
+        "</table>"
+      ],
+      "metadata": {
+        "id": "HsjXTCYnwUbi",
+        "outputId": "aa38801d-3106-4fb8-859d-ad60b9ea02d2",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 91
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<style>\n",
+              "    tr td:nth-child(2) {\n",
+              "        color: red;\n",
+              "        text-align: center;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\">\n",
+              "<thead>\n",
+              "<tr><th>x</th><th>NOT x</th></tr>\n",
+              "</thead>\n",
+              "<tbody>\n",
+              "<tr><td>0</td><td>1</td></tr>\n",
+              "<tr><td>1</td><td>0</td></tr>\n",
+              "</tbody>\n",
+              "</table>"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 具体例\n",
+        "# NOT 0111 = 1000\n",
+        "# 縦に並べると次のようになります。\n",
         "\n",
-        "    0111\n",
-        "XOR 0100\n",
-        "--------\n",
-        "  = 0011\n",
-        "NOT演算\n",
-        "下の表で定義される演算をNOT演算といいます。 ビット毎にNOT演算を適用する演算をビット毎のNOT演算（bitwise NOT）といいます。\n",
+        "# NOT 0111\n",
+        "# --------\n",
+        "#   = 1000\n",
         "\n",
-        "x\tNOT x\n",
-        "0\t1\n",
-        "1\t0\n",
-        "NOT演算は単にビットを反転する演算で、0のビットは1に、1のビットは0になります。\n",
+        "# 左シフト演算\n",
+        "# ビット列を左向きにずらす操作を論理左シフト演算や単に左シフトといいます。\n",
+        "# 論理左シフト演算ではずらした後にはみ出た部分のビットは捨てられ、\n",
+        "# 足りない部分のビットは0で埋められます。\n",
         "\n",
-        "具体例\n",
-        "NOT 0111 = 1000\n",
-        "縦に並べると次のようになります。\n",
+        "# 具体例\n",
+        "# 0111 を2ビット左シフトすると 1100\n",
+        "# 縦に並べると次のようになります。\n",
         "\n",
-        "NOT 0111\n",
-        "--------\n",
-        "  = 1000\n",
-        "左シフト演算\n",
-        "ビット列を左向きにずらす操作を論理左シフト演算や単に左シフトといいます。\n",
+        "# 2ビット左シフト\n",
+        "#     |0111|\n",
+        "#   01|11  |\n",
+        "# ----------\n",
+        "#   = |1100|\n",
+        "# はみ出た「01」の部分は切り捨てられ、右端の2ビット分は0で埋められます。\n",
         "\n",
-        "論理左シフト演算ではずらした後にはみ出た部分のビットは捨てられ、足りない部分のビットは0で埋められます。\n",
+        "# 右シフト演算\n",
+        "# ビット列を右向きにずらす演算を論理右シフト演算や単に右シフトといいます。\n",
+        "# 論理左シフト演算と同様に、ずらした後にはみ出た部分のビットは捨てられ、\n",
+        "# 足りない部分のビットは0で埋められます。\n",
         "\n",
-        "具体例\n",
-        "0111 を2ビット左シフトすると 1100\n",
-        "縦に並べると次のようになります。\n",
+        "# 具体例\n",
+        "# 0111 を2ビット右シフトすると 0001\n",
+        "# 縦に並べると次のようになります。\n",
         "\n",
-        "2ビット左シフト\n",
-        "    |0111|\n",
-        "  01|11  |\n",
-        "----------\n",
-        "  = |1100|\n",
-        "はみ出た「01」の部分は切り捨てられ、右端の2ビット分は0で埋められます。\n",
-        "\n",
-        "右シフト演算\n",
-        "ビット列を右向きにずらす演算を論理右シフト演算や単に右シフトといいます。\n",
-        "\n",
-        "論理左シフト演算と同様に、ずらした後にはみ出た部分のビットは捨てられ、足りない部分のビットは0で埋められます。\n",
-        "\n",
-        "具体例\n",
-        "0111 を2ビット右シフトすると 0001\n",
-        "縦に並べると次のようになります。\n",
-        "\n",
-        "2ビット右シフト\n",
-        "    |0111|\n",
-        "    |  01|11\n",
-        "----------\n",
-        "  = |0001|\n",
-        "はみ出た「11」の部分は切り捨てられ、左端の2ビット分は0で埋められます。\n",
+        "# 2ビット右シフト\n",
+        "#     |0111|\n",
+        "#     |  01|11\n",
+        "# ----------\n",
+        "#   = |0001|\n",
+        "# はみ出た「11」の部分は切り捨てられ、左端の2ビット分は0で埋められます。"
+      ],
+      "metadata": {
+        "id": "jEvrgoG9wnhw"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "\n",
         "ビット演算の使い道\n",
         "ビット演算は集合の演算を行ったり、高速な演算が必要な場合に用いられます。\n",
         "\n",
         "集合の操作\n",
-        "ビット列を用いると物の集まり(以下、集合と呼びます)を表現することができます。 ある要素を含むなら対応するビットを1にし、含まないなら対応するビットを0にすることで表現することができます。\n",
+        "ビット列を用いると物の集まり(以下、集合と呼びます)を表現することができます。 \n",
+        "ある要素を含むなら対応するビットを1にし、\n",
+        "含まないなら対応するビットを0にすることで表現することができます。\n",
         "\n",
         "具体例\n",
-        "例えば、1〜10の数が書かれたカードのうち、いくつかを手札として持っているとき、この手札を10ビットのビット列を用いて表現できます。 ここでは「カードに書かれた数に対応する位置のビットを1にする」というルールで手札をビット列に対応付けることにします。 例えば{2, 3, 7}という手札は「0110001000」というビット列に対応します。 2が書かれたカードは含まれるので、(左から)2ビット目が1になっています。 5が書かれたカードは含まれないので、5ビット目は0になっています。\n",
+        "例えば、1〜10の数が書かれたカードのうち、いくつかを手札として持っているとき、\n",
+        "この手札を10ビットのビット列を用いて表現できます。 ここでは「カードに書かれた数に\n",
+        "対応する位置のビットを1にする」というルールで手札をビット列に対応付けることにします。 \n",
+        "例えば{2, 3, 7}という手札は「0110001000」というビット列に対応します。 \n",
+        "2が書かれたカードは含まれるので、(左から)2ビット目が1になっています。 \n",
+        "5が書かれたカードは含まれないので、5ビット目は0になっています。\n",
         "\n",
-        "このようにビット列で表現しておくと、 例えば「2人の手札に共通して含まれるカードを求めたい」ときに、 2人の手札のビット列に対してビット毎のAND演算を行うことで 「2人の手札に共通して含まれるカードの集合」に対応するビット列を一度に得ることができます。\n",
+        "このようにビット列で表現しておくと、 例えば「2人の手札に共通して含まれるカードを求めたい」\n",
+        "ときに、 2人の手札のビット列に対してビット毎のAND演算を行うことで \n",
+        "「2人の手札に共通して含まれるカードの集合」に対応するビット列を一度に得ることができます。\n",
         "\n",
         "集合の操作とビット演算の対応の例\n",
         "操作\t対応するビット演算\n",
@@ -16902,7 +17094,7 @@
         "Copyright Since 2012 ©AtCoder Inc. All rights reserved."
       ],
       "metadata": {
-        "id": "K_41AIQWqgow"
+        "id": "iXd-7XfmwypK"
       },
       "execution_count": null,
       "outputs": []
