Colaboratory を使用して作成しました

--- a/learncpp.ipynb
+++ b/learncpp.ipynb
@@ -6,8 +6,7 @@
       "name": "learncpp.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyNk4srsbEpgw4ZO1QVPRzU1",
+      "authorship_tag": "ABX9TyPMOWc5p/2edog2uo50aS+A",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -464,7 +463,7 @@
         "  return 0;\n",
         "}"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -487,7 +486,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -511,7 +510,7 @@
       "metadata": {
         "id": "i5qsM6R8-Us7"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -567,7 +566,7 @@
         "  return 0;\n",
         "}\n"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -590,7 +589,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -627,7 +626,7 @@
         "  cout << num2 << \"\\n\";\n",
         "}\n"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -650,7 +649,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -693,7 +692,7 @@
         "  cout << \"Sum is: \" << sum;\n",
         "}"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -716,7 +715,7 @@
       "source": [
         "!g++ temp.cpp;  echo 3 7 |./a.out"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -770,7 +769,7 @@
         "  return 0;\n",
         "}\n"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -793,7 +792,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -830,7 +829,7 @@
         "  cout << d1;\n",
         "}"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -853,7 +852,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -895,7 +894,7 @@
         "  cout << isFishTasty;\n",
         "}"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -918,7 +917,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -948,7 +947,7 @@
         "  cout << myGrade << endl;\n",
         "}"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -971,7 +970,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1002,7 +1001,7 @@
         "  cout << c;\n",
         "}"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1025,7 +1024,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1037,52 +1036,56 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "QUqt-YwIQuJF"
-      }
-    },
-    {
       "cell_type": "code",
       "metadata": {
-        "id": "DpEyG2779GDK"
+        "id": "DpEyG2779GDK",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "dc592f09-ac47-4335-e84b-6a554905a62f"
       },
       "source": [
         "%%writefile temp.cpp\n",
         "# include <bits/stdc++.h>\n",
-        "#include <string>\n",
         "using namespace std;\n",
         "\n",
         "int main() {\n",
         "  string greeting = \"Hello\";\n",
         "  cout << greeting;\n",
-        "  return 0;\n",
-        "}\n"
+        "}"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "W25cg3YA9Mbi"
+        "id": "W25cg3YA9Mbi",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "59ae955c-2b57-402d-9877-413076e83489"
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "S3JhH5eL9X7c"
-      },
-      "source": [
-        "演算子\n"
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello"
+          ]
+        }
       ]
     },
     {
@@ -1098,9 +1101,15 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_EayjJ3W9g0a"
+        "id": "_EayjJ3W9g0a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a26bdb21-a199-4776-a655-56d1ba6c30da"
       },
       "source": [
+        "# 演算子\n",
+        "# 四則演算\n",
         "%%writefile temp.cpp\n",
         "# include <bits/stdc++.h>\n",
         "using namespace std;\n",
@@ -1110,29 +1119,54 @@
         "  int y = 2;\n",
         "  cout << \"5 / 2 = \" << x / y << \"\\n\";\n",
         "  cout << \"5 % 2 = \" << x % y ;\n",
-        "  return 0;\n",
         "}\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "KDvLHObl9z0h"
+        "id": "KDvLHObl9z0h",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f17c1355-ada4-4b71-c251-4d060b5ba232"
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5 / 2 = 2\n",
+            "5 % 2 = 1"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "mwz_2IN6-slS"
+        "id": "mwz_2IN6-slS",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "363dc506-3140-4c8f-c1ae-fb83ec17de44"
       },
       "source": [
+        "# 引数がマイナスの場合の結果が Python と違う!!!!\n",
         "%%writefile temp.cpp\n",
         "# include <bits/stdc++.h>\n",
         "using namespace std;\n",
@@ -1142,44 +1176,69 @@
         "  int y = 2;\n",
         "  cout << \"-5 / 2 = \" << x / y << \"\\n\";\n",
         "  cout << \"-5 % 2 = \" << x % y ;\n",
-        "  return 0;\n",
         "}"
       ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "qgdR8ljE-yzv"
-      },
-      "source": [
-        "!g++ temp.cpp; ./a.out"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "Mi_eSxf3GwBd"
-      },
-      "source": [
-        "python と比較。 違う!!!!"
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "txQnJ6OoGvrH"
+        "id": "qgdR8ljE-yzv",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5cfc10f0-7e08-4995-aead-faab3d4e57a7"
+      },
+      "source": [
+        "!g++ temp.cpp; ./a.out"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "-5 / 2 = -2\n",
+            "-5 % 2 = -1"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "txQnJ6OoGvrH",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "536d30ea-2453-4428-91b8-f771295f1b6a"
       },
       "source": [
         "print(-5 / 2)\n",
         "print(-5//2)\n",
         "print(-5 % 2)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "-2.5\n",
+            "-3\n",
+            "1\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1193,34 +1252,59 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "TlAjyukyHOJy"
+        "id": "TlAjyukyHOJy",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "38b5cf8a-4208-4a51-ed41-8f68ca3a12c0"
       },
       "source": [
+        "# 冪乗はどうするのか。 python では -5**3 と書くが。\n",
         "%%writefile temp.cpp\n",
-        "# include <bits/stdc++.h>\n",
-        "#include <cmath>\n",
+        "# include <bits/stdc++.h> // <cmath> も含まれる\n",
         "using namespace std;\n",
         "\n",
         "int main() {\n",
         "  int x = -5;\n",
         "  int y = 3;\n",
-        "  cout << \"pow(-5, 3) = \" << pow(x, y);\n",
-        "  return 0;\n",
+        "  cout << \"pow(-5, 3) = \" << pow(x, y) << endl;\n",
+        "  cout << \"pow(\" << y << \", \" << x << \") = \" << pow(y, x);\n",
         "}"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "dT-3wFH6HezZ"
+        "id": "dT-3wFH6HezZ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e8358a38-4769-49a0-e385-dee93993b68e"
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "pow(-5, 3) = -125\n",
+            "pow(3, -5) = 0.00411523"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1234,9 +1318,14 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "b4Nys8y_vBT1"
+        "id": "b4Nys8y_vBT1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f79cf436-1000-4b39-88f3-088b60088249"
       },
       "source": [
+        "# アサインメント演算子\n",
         "%%writefile temp.cpp\n",
         "# include <bits/stdc++.h>\n",
         "using namespace std;\n",
@@ -1248,29 +1337,57 @@
         "  cout << x-- << \"\\n\";\n",
         "  cout << x << \"\\n\";\n",
         "  cout << --x << \"\\n\";\n",
-        "  return 0;\n",
         "}"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "4pyoHRQBvg_z"
+        "id": "4pyoHRQBvg_z",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1c635769-8875-4f17-d169-b38e4b0c3957"
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "8\n",
+            "8\n",
+            "7\n",
+            "6\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Hpc2_pUod-fM"
+        "id": "Hpc2_pUod-fM",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "01391735-e63e-4f24-bcf7-94e8f2b6a0b0"
       },
       "source": [
+        "# ビット演算子\n",
+        "# 5 は 2進数で 101、4 は 100 なので & を取ると、100 で 4 になる。\n",
         "%%writefile temp.cpp\n",
         "# include <bits/stdc++.h>\n",
         "using namespace std;\n",
@@ -1279,51 +1396,144 @@
         "    int x = 5;\n",
         "    x &= 4;\n",
         "    cout << x;\n",
-        "    return 0;\n",
         "}"
       ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Co6kI7K9eHMS"
-      },
-      "source": [
-        "!g++ temp.cpp; ./a.out"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "S6Wkip65fbHc"
-      },
-      "source": [
-        "説明 $\\quad$ 5 は 2進数で 101、4 は 100 なので & を取ると、100 で 4 になる。\n"
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "DoppkUDGfF7C"
+        "id": "Co6kI7K9eHMS",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "68fd843e-f1f5-4fec-a5d6-84ef26177013"
+      },
+      "source": [
+        "!g++ temp.cpp; ./a.out"
+      ],
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 2進数 10進数 相互変換\n",
+        "%%writefile temp.cpp\n",
+        "# include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "\n",
+        "int main() {\n",
+        "    bitset<3> x(4);\n",
+        "    bitset<3> y = 5;\n",
+        "    bitset<3> z(0b111);\n",
+        "    bitset<3> a(\"010\");\n",
+        "    cout << x << endl;\n",
+        "    cout << y << endl;\n",
+        "    cout << z << endl;\n",
+        "    cout << a << endl;\n",
+        "    cout << a.to_ullong() << endl;\n",
+        "}"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ixIvpcsJK0u_",
+        "outputId": "7de33adb-e15f-457a-e29b-0ac030223972"
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp; ./a.out"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XRpLe0v7LTuw",
+        "outputId": "d794737d-295a-4d8c-feae-3be1889cd3eb"
+      },
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "100\n",
+            "101\n",
+            "111\n",
+            "010\n",
+            "2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DoppkUDGfF7C",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9cae99de-5067-4465-c6dd-a722b20341ec"
       },
       "source": [
         "import numpy as np\n",
         "print(np.base_repr(5, 2))\n",
         "print(np.base_repr(4,2))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "101\n",
+            "100\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "3BUv3ygpf4rH"
+        "id": "3BUv3ygpf4rH",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ca4f4893-a1a2-468e-df91-02b3a9049e1d"
       },
       "source": [
+        "# 5 は 2進数で 101 で、これを `<<` で 3桁左にずらすと 101000 にな\n",
         "%%writefile temp.cpp\n",
         "# include <bits/stdc++.h>\n",
         "using namespace std;\n",
@@ -1332,30 +1542,40 @@
         "  int x = 5;\n",
         "  x <<= 3;\n",
         "  cout << x;\n",
-        "  return 0;\n",
         "}"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "TJ1DijnqgAHr"
+        "id": "TJ1DijnqgAHr",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1c21bf49-947d-4b54-f549-67da490b97c8"
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "WmsIyNL5gQP3"
-      },
-      "source": [
-        "説明 $\\quad$ 5 は 2進数で 101 で、これを `<<` で 3桁左にずらすと 101000 になり、これは十進数で 40 である。"
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "40"
+          ]
+        }
       ]
     },
     {
@@ -1369,6 +1589,15 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "WxmC900lIEdI"
+      }
     },
     {
       "cell_type": "markdown",
